# DoubleNoteRS

./: Cargo.toml  README.md  cloudflare-build.sh  index.html
src/: main.rs
src/app/: mod.rs
src/app/routes/: bcp_notebook.rs  collaboration.rs  demo.rs  mod.rs  notebooks.rs  servers.rs  settings.rs  welcome.rs
src/components/: button_group.rs  card.rs  mod.rs  notebooks.rs  sidenav.rs  toolbar.rs
src/core/: mod.rs
src/core/bcp/: mod.rs  vcs.rs
src/core/common/: mod.rs
src/core/sbp/: mod.rs
src/styles/: main.css
