[package]
name = "double_note"
version = "0.0.0"
edition = "2021"
authors = ["Tanja <rust@tanja.pw>"]
description = "A Rust implementation of DoubleNote"
documentation = "https://docs.rs/double_note"
homepage = "https://github.com/Tanja-4732/DoubleNoteRS#readme"
repository = "https://github.com/Tanja-4732/DoubleNoteRS"
license = "AGPL-3.0-or-later"
# keywords = []
# categories = []
include = ["/src", "/Cargo.toml", "/README.md", "/LICENSE.md"]


# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
chrono = { version = "0.4.26", features = ["serde"] }
console_error_panic_hook = "0.1.7"
console_log = "1.0.0"
gloo-storage = "0.2.2"
leptos = "0.4.8"
leptos_router = { version = "0.4.8", features = ["csr"] }
log = "0.4.19"
serde = { version = "1.0.166", features = ["derive", "rc"] }
uuid = { version = "1.3.4", features = ["serde", "v4", "js"] }
gix-hash = "0.11.1"
gix-refspec = "0.15.0"
